update README and fix some spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -611,7 +611,8 @@ input, textarea, select, .uneditable-input {
 ==============================================*/
 
 .past-members {
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 150px;
   h2 {
     color: gray;
     padding-bottom: 20px;
@@ -784,6 +785,8 @@ input, textarea, select, .uneditable-input {
 ==============================================*/
 
 .login-page {
+  padding-top: 80px;
+  height: 100vh;
 	h4 {
 		padding: 30px 0 30px 0;
 		color: gray;
